--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 header text-white text-center">
-                <h1 style="font-weight: 700; letter-spacing: 2px; text-shadow: 0 2px 8px rgba(0,0,0,0.2);">Hệ thống Quản trị - Cửa hàng 303</h1>
+            <div class="col-12 text-center py-4 mb-2 admin-header">
+                <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
+                    <img src="images/user.png" alt="Logo" style="width:56px;height:56px;border-radius:14px;box-shadow:0 2px 12px rgba(0,0,0,0.10);margin-right:18px;background:#fff;" class="mb-3 mb-md-0">
+                    <h1 class="mb-0 admin-title">Hệ thống Quản trị <span class="font-weight-bold" style="color:#ffc107;">- Store Châu Nguyễn</span></h1>
+                </div>
             </div>
         </div>
     </div>
