--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
   </head>
   <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 header text-white text-center">
-                <h1 style="font-weight: 700; letter-spacing: 2px; text-shadow: 0 2px 8px rgba(0,0,0,0.2);">Hệ thống Quản trị - Cửa hàng 303</h1>
+            <div class="col-12 text-center py-4 mb-2 admin-header">
+                <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
+                    <img src="images/user.png" alt="Logo" style="width:56px;height:56px;border-radius:14px;box-shadow:0 2px 12px rgba(0,0,0,0.10);margin-right:18px;background:#fff;" class="mb-3 mb-md-0">
+                    <h1 class="mb-0 admin-title">Hệ thống Quản trị <span class="font-weight-bold" style="color:#ffc107;">- Store Châu Nguyễn</span></h1>
+                </div>
             </div>
         </div>
     </div>
